--- a/client/src/app/auth/components/login/login.component.html
+++ b/client/src/app/auth/components/login/login.component.html
@@ -3,7 +3,7 @@
         <img src="/assets/trello-logo.png" class="trello-main-logo" />
     </a>
     <div class="form-container">
-        <div class="login-header">Login to Absolutely Not Trello</div>
+        <div class="login-header">Log in to Totally Not Trello</div>
         <div class="errors" *ngIf="errorMessage">{{ errorMessage }}</div>
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <input formControlName="email" type="email" placeholder="Email" class="login-input" />
