--- a/client/src/app/auth/components/register/register.component.html
+++ b/client/src/app/auth/components/register/register.component.html
@@ -3,8 +3,8 @@
         <img src="/assets/trello-logo.png" class="trello-main-logo" />
     </a>
     <div class="form-container">
-        <div class="login-header">Register for Absolutely Not Trello</div>
-        <div class="errors" *ngIf="errorMessage">{{ errorMessage }}</div> <!-- don't forget you need common module in auth module to do this -->
+        <div class="login-header">Register for Totally Not Trello</div>
+        <div class="errors" *ngIf="errorMessage">{{ errorMessage }}</div>
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <input formControlName="email" type="email" placeholder="Email" class="login-input" />
             <input formControlName="username" type="username" placeholder="Username" class="login-input" />
@@ -12,7 +12,7 @@
             <button type="submit" class="login-submit-button">Register</button>
         </form>
         <div class="bottom-form-links">
-            <a routerLink="/login" class="register-link">Sign in</a>
+            <a routerLink="/login" class="register-link">Log in</a>
         </div>
     </div>
 </div>
