--- a/client/src/app/board/components/board/board.component.html
+++ b/client/src/app/board/components/board/board.component.html
@@ -7,13 +7,24 @@
     <div class="columns">
         <div class="column" *ngFor="let column of data.columns">
             <div class="column-title">{{column.title}}</div>
+            <div class="task" *ngFor="let task of getTasksByColumn(column.id, data.tasks)">
+                {{ task.title }}
+            </div>
+            <inline-form
+                class="create-task-form"
+                defaultText="Add card"
+                [hasButton]="true"
+                buttonText="Add card"
+                inputPlaceholder="Add card name"
+                (handleSubmit)="createTask($event, column.id)"
+            ></inline-form>
         </div>
         <inline-form
             class="create-column-form"
             defaultText="Add list"
             [hasButton]="true"
             buttonText="Add list"
-            inputPlaceholder="Add column name"
+            inputPlaceholder="Add list name"
             (handleSubmit)="createColumn($event)"
         ></inline-form>
     </div>
