--- a/client/src/app/board/components/board/board.component.html
+++ b/client/src/app/board/components/board/board.component.html
@@ -14,7 +14,12 @@
         <div class="column" *ngFor="let column of data.columns">
             <div class="column-title">
                 {{column.title}}
-                <div class="delete-board" (click)="deleteColumn(column.id)">Delete</div>
+                <img 
+                    src="/assets/close_icon.svg"
+                    alt="delete column icon"
+                    class="column-delete-icon"
+                    (click)="deleteColumn(column.id)"
+                >
             </div>
             <div class="task" *ngFor="let task of getTasksByColumn(column.id, data.tasks)">
                 {{ task.title }}
