added a modal popup, child routes and template for tasks, and  integraded it with existing board page. Allowed updating of task titles, description etc. inline, and updated task controller and socket events for task updates

--- a/client/src/app/board/components/board/board.component.html
+++ b/client/src/app/board/components/board/board.component.html
@@ -26,7 +26,11 @@
                     (click)="deleteColumn(column.id)"
                 >
             </div>
-            <div class="task" *ngFor="let task of getTasksByColumn(column.id, data.tasks)">
+            <div 
+                class="task"
+                *ngFor="let task of getTasksByColumn(column.id, data.tasks)"
+                (click)="openTask(task.id)"
+            >
                 {{ task.title }}
             </div>
             <inline-form
@@ -48,3 +52,5 @@
         ></inline-form>
     </div>
 </div>
+
+<router-outlet></router-outlet>
