Added order property to tasks model for persistent organization. Added sorting by column and order on tasks controller for get requests. Implemented drag and drop sort order changes to tasks in client with persistence in back-end

--- a/client/src/app/board/components/board/board.component.html
+++ b/client/src/app/board/components/board/board.component.html
@@ -37,7 +37,7 @@
                 </div>
                 <div 
                     class="task"
-                    *ngFor="let task of getTasksByColumn(column.id, data.tasks); trackBy: trackById"
+                    *ngFor="let task of getTasksByColumn(column.id); index as i; trackBy: trackById"
                     (click)="openTask(task.id)"
                     cdkDrag
                     [cdkDragData]="task.id"
