enabled deleting tasks in the task modal and the board page of the client. added listeners and socket events for the back-end to keep all clients up to date on deletions in real-time.

--- a/client/src/app/board/components/board/board.component.html
+++ b/client/src/app/board/components/board/board.component.html
@@ -43,6 +43,12 @@
                     [cdkDragData]="task.id"
                 >
                     {{ task.title }}
+                    <img 
+                        src="/assets/close_icon.svg"
+                        alt="delete column icon"
+                        class="column-delete-icon"
+                        (click)="deleteTask(task.id); $event.stopPropagation()"
+                    >
                 </div>
                 <inline-form
                     class="create-task-form"
