--- a/client/src/app/board/components/taskModal/taskModal.component.html
+++ b/client/src/app/board/components/taskModal/taskModal.component.html
@@ -34,7 +34,7 @@
         <div class="task-modal-actions">
             <div class="task-modal-actions-label">ACTIONS</div>
             <div>
-                <div class="task-modal-actions-action">
+                <div class="task-modal-actions-action" (click)="deleteTask()">
                     <img src="/assets/trash.svg" alt="delete-icon" class="task-modal-actions-icon">
                     DELETE
                 </div>
